updates image demo

--- a/class-05/demo/anchor-image-demo/index.html
+++ b/class-05/demo/anchor-image-demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> anchor and image dmeo</title>
+    <title>Anchor and Image Demo</title>
     <link rel="stylesheet" type="text/css" href="css/style.css"></link>
   </head>
   <body>
@@ -10,21 +10,30 @@
       <nav>
         <ul>
           <li>
-            <a href="https://www.google.com"> go go google</a>
+            <a href="https://www.google.com">Google.com</a>
           </li>
           <li>
-            <a href="projects/index.html">projects</a>
-         </li>
-         <li>
-           <a href="about/index.html">about</a>
-         </li>
+            <a href="projects/index.html">Projects</a>
+          </li>
+          <li>
+            <a href="about/index.html">About</a>
+          </li>
         </ul>
       </nav>
     </section>
     <section id="image-demo">
-      <img src="https://media.giphy.com/media/MKwNmAdWqHBSg/giphy.gif">
-      <img src="img/matrix1.jpg">
-      <img src="img/matrix2.gif">
+      <article class="image-container">
+        <img src="https://media.giphy.com/media/MKwNmAdWqHBSg/giphy.gif">
+        <p>Here is a caption for this image. It's a silly cat that is liking a banana.</p>
+      </article>
+      <article class="image-container">
+        <img src="img/matrix1.jpg">
+        <p>Here is a caption for this image.</p>
+      </article>
+      <article class="image-container">
+        <img src="img/matrix2.gif">
+        <p>Here is a caption for this image.</p>
+      </article>
     </section>
   </body>
 </html>
