--- a/class-12/demo/charts-clicktracker/index.html
+++ b/class-12/demo/charts-clicktracker/index.html
@@ -25,6 +25,57 @@
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
   <script src="js/app.js"></script>
+
+<canvas id="myChart2" width="300" height="300"></canvas>
+<script>
+// const ctx = document.getElementById('myChart2').getContext('2d');
+
+// new Chart(ctx, {
+//     type: 'bar',
+//     data: {
+//         labels: ['Red', 'Blue'//, 'Yellow', 'Green', 'Purple', 'Orange
+//         ] ,
+//         datasets: [
+//           {
+//             label: '# of Votes',
+//             data: [12, 19, //3, 5, 2, 3, 9, 4, 6
+//           ],
+//             backgroundColor: [
+//                 'rgba(255, 99, 132, 0.2)',
+//                 'rgba(54, 162, 235, 0.2)',
+//             ],
+//             borderColor: [
+//                 'rgba(255, 99, 132, 1)',
+//                 'rgba(54, 162, 235, 1)',
+//             ],
+//             borderWidth: 1
+//         }
+//       ]
+//     },
+//     options: {
+//         scales: {
+//             y: {
+//                 beginAtZero:false 
+//             }
+//         }
+//     }
+// });
+
+
+// ctx.lineWidth = 10;
+// ctx.strokeRect(75, 140, 150, 110);
+
+// ctx.fillRect(130, 190, 40, 60);
+
+// ctx.beginPath();
+// ctx.moveTo(50, 140);
+// ctx.lineTo(150, 60);
+// ctx.lineTo(250, 140);
+// ctx.closePath();
+// ctx.stroke();
+
+</script>
+
 </body>
 
 </html>
